@@ -16,7 +16,6 @@ import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
-import seedu.address.commons.util.StringUtil;
 import seedu.address.model.Model;
 import seedu.address.model.ModelManager;
 import seedu.address.model.UserPrefs;
@@ -39,14 +38,14 @@ public class FindCommandTest {
         List<String> firstKeywords = List.of("first");
         List<String> secondKeywords = List.of("second");
 
-        FindCommand findFirstCommand = new FindCommand(firstPredicate, firstKeywords);
-        FindCommand findSecondCommand = new FindCommand(secondPredicate, secondKeywords);
+        FindCommand findFirstCommand = new FindCommand(firstPredicate);
+        FindCommand findSecondCommand = new FindCommand(secondPredicate);
 
         // same object -> returns true
         assertTrue(findFirstCommand.equals(findFirstCommand));
 
         // same values -> returns true (equality is based on predicate)
-        FindCommand findFirstCommandCopy = new FindCommand(firstPredicate, firstKeywords);
+        FindCommand findFirstCommandCopy = new FindCommand(firstPredicate);
         assertTrue(findFirstCommand.equals(findFirstCommandCopy));
 
         // different types -> returns false
@@ -61,39 +60,28 @@ public class FindCommandTest {
 
     @Test
     public void execute_zeroKeywords_noPersonFound() {
-        String input = " ";
-        NameContainsKeywordsPredicate predicate = preparePredicate(input);
-        List<String> keywords = List.of(input);
-        FindCommand command = new FindCommand(predicate, keywords);
+        NameContainsKeywordsPredicate predicate = preparePredicate(" ");
+        String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 0, predicate.keywordsToString());
+        FindCommand command = new FindCommand(predicate);
         expectedModel.updateFilteredPersonList(predicate);
-
-        String quotedKeywords = StringUtil.wrapEachInQuotesAndJoin(keywords);
-        String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 0, quotedKeywords);
-
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
         assertEquals(Collections.emptyList(), model.getFilteredPersonList());
     }
 
     @Test
     public void execute_multipleKeywords_multiplePersonsFound() {
-        String input = "Kurz Elle Kunz";
-        NameContainsKeywordsPredicate predicate = preparePredicate(input);
-        List<String> keywords = Arrays.asList(input.split("\\s+"));
-        FindCommand command = new FindCommand(predicate, keywords);
+        NameContainsKeywordsPredicate predicate = preparePredicate("Kurz Elle Kunz");
+        String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 3, predicate.keywordsToString());
+        FindCommand command = new FindCommand(predicate);
         expectedModel.updateFilteredPersonList(predicate);
-
-        String quotedKeywords = StringUtil.wrapEachInQuotesAndJoin(keywords);
-        String expectedMessage = String.format(MESSAGE_PERSONS_LISTED_OVERVIEW, 3, quotedKeywords);
-
         assertCommandSuccess(command, model, expectedMessage, expectedModel);
         assertEquals(Arrays.asList(CARL, ELLE, FIONA), model.getFilteredPersonList());
     }
 
     @Test
     public void toStringMethod() {
-        NameContainsKeywordsPredicate predicate = new NameContainsKeywordsPredicate(List.of("keyword"));
-        List<String> keywords = List.of("keyword");
-        FindCommand findCommand = new FindCommand(predicate, keywords);
+        NameContainsKeywordsPredicate predicate = new NameContainsKeywordsPredicate(Arrays.asList("keyword"));
+        FindCommand findCommand = new FindCommand(predicate);
         String expected = FindCommand.class.getCanonicalName() + "{predicate=" + predicate + "}";
         assertEquals(expected, findCommand.toString());
     }
